--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
      <img src="images/success.png" alt="Successful business" />
      <div class="partSection">
       <b>Jsme konzultační společnost</b>
-      nabízející moderní řešení, služby a produkty v oblasti systémů řízení a systémové integrace
+      nabízející moderní řešení, služby a produkty v oblasti systémů řízení a systémové integrace.
      </div>
      <div class="partSection">
       <b>Jsme zde od toho, abyste získali:</b>
       <ul>
        <li>
-        Certifikáty kteréhokoliv z nabízených systémů řízení
+        certifikáty kteréhokoliv z nabízených systémů řízení
        </li>
        <li>
-        Potřebná osvědčení ze školení
+        potřebná osvědčení ze školení
        </li>
        <li>
-        Spolehlivého rádce, trenéra, auditora, který pomůže tehdy, kdy vlastní zdroje nestačí
+        spolehlivého rádce, trenéra, auditora, který pomůže tehdy, kdy vlastní zdroje nestačí
        </li>
        <li>
-        Jistotu, že připravovaný systém řízení Vám bude sluhou, ne pánem
+        jistotu, že připravený systém řízení vám bude sluhou, ne pánem
        </li>
        <li>
-        Jistotu, že vše co děláte, děláte správně
+        jistotu, že vše co děláte, děláte správně
        </li>
       </ul>
      </div>
@@ -51,27 +51,27 @@
       <b>Našimi přednostmi jsou:</b>
       <ul>
        <li>
-        Flexibilita – jsme při Vás právě tehdy, kdy nás potřebujete
+        flexibilita – jsme při vás právě tehdy, kdy nás potřebujete
        </li>
        <li>
-        Komplexnost – odborně poradíme ve všech oblastech řízení
+        komplexnost – odborně poradíme ve všech oblastech řízení
        </li>
        <li>
-        Zkušenost – každý z poradců má za sebou bohatou praxi a zkušenosti
-        s řešením problémů ve více než 50 firmách všech možných velikostí a
+        zkušenost – každý z poradců má za sebou bohatou praxi a zkušenosti
+        s řešením problémů ve více než padesáti firmách různých velikostí a
         zaměření
        </li>
       </ul>
      </div>  
      <div class="partSection">
-      <b>Naše cíle při činnosti pro Vás:</b>
+      <b>Naše cíle při činnosti pro vás:</b>
       <ul>
        <li>
-        Implementovaný systém nesmí být překážkou v hlavní podnikatelské
+        implementovaný systém nesmí být překážkou v hlavní podnikatelské
         činnosti organizace
        </li>
        <li>
-        Minimum byrokracie a maximum užitku pro organizaci, management i pro
+        minimum byrokracie a maximum užitku pro organizaci, management i pro
         zaměstnance
        </li>
       </ul>
@@ -80,7 +80,7 @@
    </div>
    <div id="footer">
     <div id="footerText">
-     &copy; 2009 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>. Poslední změna: <i>24. Listopadu 2009</i>
+     &copy; 2017 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>
     </div>
    </div>
   </div>
