--- a/kontakty.html
+++ b/kontakty.html
@@ -33,10 +33,10 @@
       e-mailové adrese:
       <ul>
        <li>
-        <b>Poradci:</b> <a href="mailto:kvalisys@kvalisys.com">kvalisys@kvalisys.com</a>
+        <b>poradci:</b> <a href="mailto:kvalisys@kvalisys.com">kvalisys@kvalisys.com</a>
        </li>
        <li>
-        <b>Obchod:</b> <a href="mailto:obchod@kvalisys.com">obchod@kvalisys.com</a>
+        <b>obchod:</b> <a href="mailto:obchod@kvalisys.com">obchod@kvalisys.com</a>
        </li>
       </ul>
      </div>
@@ -44,7 +44,7 @@
    </div>
    <div id="footer">
     <div id="footerText">
-     &copy; 2009 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>. Poslední změna: <i>24. Listopadu 2009</i>
+     &copy; 2017 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>
     </div>
    </div>
   </div>
