--- a/kvalifikace.html
+++ b/kvalifikace.html
@@ -28,21 +28,21 @@
      <div class="partWithPic" style="padding-bottom: 40px">
       <b>Náš tým je složen ze zkušených odborníků</b>, kteří disponují osobními
       osvědčeními a certifikáty od renomovaných vzdělávacích organizací (Česká
-      společnost pro jakost, TÜV –SÜD Czech a pod.) 
+      společnost pro jakost, TÜV –SÜD Czech a pod.).
      </div>
      <div class="partSection"> 
       Každý z poradců se neustále vzdělává, pracuje s aktuálními normami a
-      legislativními předpisy
+      legislativními předpisy.
      </div>
      <div class="partSection"> 
       Naši poradci jsou současně auditoři systémů řízení a lektoři v této
-      oblasti
+      oblasti.
      </div>
     </div> 
    </div>
    <div id="footer">
     <div id="footerText">
-     &copy; 2009 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>. Poslední změna: <i>24. Listopadu 2009</i>
+     &copy; 2017 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>
     </div>
    </div>
   </div>
