--- a/produkty.html
+++ b/produkty.html
@@ -23,19 +23,19 @@
    <div id="mainPage">
     <div class="partText">
      <div class="partWithPic">
-      <b>Naše společnost Vám poskytne komplexní služby v oblastech:</b>
+      <b>Naše společnost vám poskytne komplexní služby v oblastech:</b>
       <ul>
        <li>
-        Zavedení systému řízení do praxe a přípravu na certifikaci resp. akreditaci
+        zavedení systému řízení do praxe a přípravu na certifikaci resp. akreditaci
        </li>
        <li>
-        Udržování systému řízení po certifikaci / akreditaci v aktuálním stavu
+        udržování systému řízení po certifikaci / akreditaci v aktuálním stavu
        </li>
        <li>
-        Školení pracovníků při budování systému řízení a v průběhu jeho fungování
+        školení pracovníků při budování systému řízení a v průběhu jeho fungování
        </li>
        <li>
-        Provádění interních auditů
+        provádění interních auditů
        </li>
       </ul>
      </div>
@@ -52,43 +52,43 @@
       v následujících normách:
       <ul>
        <li>
-        Systém managementu kvality dle ISO 9001:2008, 
+        systém managementu kvality dle ISO 9001:2008, 
        </li>
        <li>
-        Systém managementu kvality při výrobě, montáži a servisu zdravotnických
+        systém managementu kvality při výrobě, montáži a servisu zdravotnických
         prostředků dle ISO 13485
        </li>
        <li>
-        Systém managementu kvality u zkušeben a kalibračních laboratoří dle ISO
+        systém managementu kvality u zkušeben a kalibračních laboratoří dle ISO
         17025
        </li>
        <li>
-        Systém managementu kvality ve zdravotnických laboratořích dle ISO 15189
+        systém managementu kvality ve zdravotnických laboratořích dle ISO 15189
        </li>
        <li>
-        Systém managementu kvality dle ISO/TS 16949 – zvláštní požadavky na ISO
+        systém managementu kvality dle ISO/TS 16949 – zvláštní požadavky na ISO
         9001 v automobilovém průmyslu
        </li>
        <li>
-        Systém managementu bezpečnosti a ochrany zdraví při práci dle ISO OHSAS
+        systém managementu bezpečnosti a ochrany zdraví při práci dle ISO OHSAS
         18001
        </li>
        <li>
-        Systém environmentálního managementu dle ISO 14001, EMAS
+        systém environmentálního managementu dle ISO 14001, EMAS
        </li>
        <li>
-        Systém managementu bezpečnosti potravin dle ISO 22000, správná výrobní
+        systém managementu bezpečnosti potravin dle ISO 22000, správná výrobní
         praxe (GMP), správná hygienická praxe (GHP), principy HACCP
        </li>
        <li>
-        Certifikovaná služba - nestranné a odborné ověření kvality služby,
+        certifikovaná služba - nestranné a odborné ověření kvality služby,
         spokojenosti zákazníka, funkčnosti vnitřních systémů a komunikace
        </li>
        <li>
-        Systém managementu bezpečnosti informací dle ISO 27001
+        systém managementu bezpečnosti informací dle ISO 27001
        </li>
        <li>
-        Kosmetika – správná výrobní praxe dle ISO 22716
+        kosmetika – správná výrobní praxe dle ISO 22716
        </li>
       </ul>
      </div>  
@@ -97,31 +97,31 @@
       řízení, také:</b>
       <ul>
        <li>
-        Výrobci a distributoři zdravotnických prostředků
+        výrobci a distributoři zdravotnických prostředků
        </li>
        <li>
-        Zkušebny
+        zkušebny
        </li>
        <li>
-        Kalibrační laboratoře
+        kalibrační laboratoře
        </li>
        <li>
-        Zdravotnické laboratoře a zdravotnická zařízení
+        zdravotnické laboratoře a zdravotnická zařízení
        </li>
        <li>
-        Výrobci kosmetiky
+        výrobci kosmetiky
        </li>
        <li>
-        Hotely, restaurace, stravovací zařízení
+        hotely, restaurace, stravovací zařízení
        </li>
        <li>
-        Wellness a fitness centra
+        wellness a fitness centra
        </li>
        <li>
-        Obecní úřady
+        obecní úřady
        </li>
        <li>
-        Školy
+        školy
        </li>
       </ul>
      </div>
@@ -129,7 +129,7 @@
    </div>
    <div id="footer">
     <div id="footerText">
-     &copy; 2009 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>. Poslední změna: <i>24. Listopadu 2009</i>
+     &copy; 2017 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>
     </div>
    </div>
   </div>
