--- a/produkty.html
+++ b/produkty.html
@@ -70,11 +70,10 @@
         9001 v automobilovém průmyslu
        </li>
        <li>
-        systém managementu bezpečnosti a ochrany zdraví při práci dle ISO OHSAS
-        18001
+        systém managementu bezpečnosti a ochrany zdraví při práci dle ISO 18001, SMS
        </li>
        <li>
-        systém environmentálního managementu dle ISO 14001, EMAS
+        systém environmentálního managementu dle ISO 14001, EMS
        </li>
        <li>
         systém managementu bezpečnosti potravin dle ISO 22000, správná výrobní
@@ -85,7 +84,7 @@
         spokojenosti zákazníka, funkčnosti vnitřních systémů a komunikace
        </li>
        <li>
-        systém managementu bezpečnosti informací dle ISO 27001
+        systém managementu bezpečnosti informací dle ISMS ISO 27000
        </li>
        <li>
         kosmetika – správná výrobní praxe dle ISO 22716
