update 2019, new contacts

--- a/kontakty.html
+++ b/kontakty.html
@@ -29,14 +29,27 @@
       <b>Kontaktní informace:</b>
      </div>
      <div class="partSection">
-      Pokud máte zájem o spolupráci s námi, prosím, kontaktujte nás na naší
-      e-mailové adrese:
+      Pokud máte zájem o naše služby, neváhejte nás kontaktovat:
       <ul>
        <li>
-        <b>poradci:</b> <a href="mailto:kvalisys@kvalisys.com">kvalisys@kvalisys.com</a>
+        <b><a href="mailto:kvalisys@kvalisys.com">kvalisys@kvalisys.com</a></b>
+       </li>
+      </ul>
+     </div>
+     <div class="partSection">
+      Náš tým:
+      <ul>
+       <li>
+        <b>Ing. Jiří Pavlík:</b> <a href="mailto:pavlik@kvalisys.com">pavlik@kvalisys.com</a>
        </li>
        <li>
-        <b>obchod:</b> <a href="mailto:obchod@kvalisys.com">obchod@kvalisys.com</a>
+        <b>Ing. Blanka Kloudová:</b> <a href="mailto:kloudova@kvalisys.com">kloudova@kvalisys.com</a>
+       </li>
+       <li>
+        <b>Ing. Vladimír Skácel:</b> <a href="mailto:skacel@kvalisys.com">skacel@kvalisys.com</a>
+       </li>
+       <li>
+        <b>Ing. Olga Pavlíková:</b> <a href="mailto:pavlikova@kvalisys.com">pavlikova@kvalisys.com</a>
        </li>
       </ul>
      </div>
@@ -44,7 +57,7 @@
    </div>
    <div id="footer">
     <div id="footerText">
-     &copy; 2017 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>
+     &copy; 2019 KvaliSys.com
     </div>
    </div>
   </div>
