--- a/kvalifikace.html
+++ b/kvalifikace.html
@@ -42,7 +42,7 @@
    </div>
    <div id="footer">
     <div id="footerText">
-     &copy; 2017 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>
+     &copy; 2019 KvaliSys.com
     </div>
    </div>
   </div>
