--- a/produkty.html
+++ b/produkty.html
@@ -52,42 +52,38 @@
       v následujících normách:
       <ul>
        <li>
-        systém managementu kvality dle ISO 9001:2008, 
+        systém managementu kvality - požadavky dle ČSN EN ISO 9001:2016
        </li>
        <li>
-        systém managementu kvality při výrobě, montáži a servisu zdravotnických
-        prostředků dle ISO 13485
+        zdravotnické prostředky - systémy managementu kvality - požadavky pro účely
+		předpisů  ČSN EN ISO 13485 ed. 2 : 2016
        </li>
        <li>
-        systém managementu kvality u zkušeben a kalibračních laboratoří dle ISO
-        17025
+        všeobecné požadavky na kompetenci zkušebních a kalibračních laboratoří dle
+		ČSN EN ISO/IEC 17025 : 2018
        </li>
        <li>
-        systém managementu kvality ve zdravotnických laboratořích dle ISO 15189
+        zdravotnické laboratoře - požadavky na kvalitu a způsobilost ČSN EN ISO 15189
+		ed. 2 : 2013, oprava 2017
        </li>
        <li>
-        systém managementu kvality dle ISO/TS 16949 – zvláštní požadavky na ISO
-        9001 v automobilovém průmyslu
+        systémy managementu bezpečnosti a ochrany zdraví při práci - Požadavky ČSN ISO
+		45001 : 2018
        </li>
        <li>
-        systém managementu bezpečnosti a ochrany zdraví při práci dle ISO 18001, SMS
+        systémy environmentálního managementu - požadavky ČSN EN ISO 14001 : 2016
        </li>
        <li>
-        systém environmentálního managementu dle ISO 14001, EMS
+        systémy managementu bezpečnosti potravin - požadavky na organizaci v potravinovém
+		řetězci ČSN EN ISO 22000 : 2019, správná výrobní praxe (GMP), správná hygienická
+		praxe (GHP), principy HACCP
        </li>
        <li>
-        systém managementu bezpečnosti potravin dle ISO 22000, správná výrobní
-        praxe (GMP), správná hygienická praxe (GHP), principy HACCP
+        certifikovaná služba - nestranné a odborné ověření kvality služby, spokojenosti
+		zákazníka, funkčnosti vnitřních systémů a komunikace
        </li>
        <li>
-        certifikovaná služba - nestranné a odborné ověření kvality služby,
-        spokojenosti zákazníka, funkčnosti vnitřních systémů a komunikace
-       </li>
-       <li>
-        systém managementu bezpečnosti informací dle ISMS ISO 27000
-       </li>
-       <li>
-        kosmetika – správná výrobní praxe dle ISO 22716
+        informační technologie - bezpečnostní techniky - systémy řízení bezpečnosti informací – požadavky ČSN EN ISO/IEC 27001, změna 2017
        </li>
       </ul>
      </div>  
@@ -108,9 +104,6 @@
         zdravotnické laboratoře a zdravotnická zařízení
        </li>
        <li>
-        výrobci kosmetiky
-       </li>
-       <li>
         hotely, restaurace, stravovací zařízení
        </li>
        <li>
@@ -128,7 +121,7 @@
    </div>
    <div id="footer">
     <div id="footerText">
-     &copy; 2017 <a href="mailto:webmaster@kvalisys.com">KvaliSys.com</a>
+     &copy; 2019 KvaliSys.com
     </div>
    </div>
   </div>
